# Keiba

./: .gitignore  AGENTS.md  GEMINI.md  README.md  ROADMAP.md  arch.md  debug_encoding.py  debug_parser_direct.py  feedback_notes.md  main.ipynb  main.py  process.md  pyproject.toml  requirements.txt  run_pipeline.sh
ScrapeData/: main.ipynb
ScrapeData/modules/constants/: _config.py  _local_paths.py
ScrapeData/modules/preparing/: _get_rawdata.py  (+4 more)
data/master/: horse_id.csv  jockey_id.csv
modules/constants/: __init__.py  _horse_results_preprocessed_cols.py  _horse_results_raw_cols.py  _local_dirs.py  _master.py  _merged_data_cols.py  _peds_cols.py  _results_preprocessed_cols.py  _results_raw_cols.py
modules/policies/: __init__.py  bet_policy.py  score_policy.py
modules/preparing/: __init__.py  _get_rawdata.py  _scrape_html.py  _scrape_race_id_list.py  _scrape_shutuba_table.py  _update_horse.py
modules/preprocessing/: __init__.py  _abstract_data_processor.py  _data_merger.py  _feature_engineering.py  _horse_results_processor.py  _peds_processor.py  _race_info_processor.py  _results_processor.py  _return_processor.py  _shutuba_data_merger.py  _shutuba_table_processor.py
modules/simulation/: _betting_tickets.py  _plot.py  _simulator.py
modules/training/: _data_splitter.py  _keiba_ai.py  _keiba_ai_factory.py  _model_wrapper.py
notebook/: describe_csv.ipynb  test.ipynb
src/: html2pandasdf.py  preprocessing_race_results.py
src/model/: train.py
src/preprocessing/: feature_engineering.py  html_parser.py  inspect_structure.py
src/simulation/: backtest.py
(+7 files in other folders)
