[project]
name = "keiba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dill>=0.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.0.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
