[project]
name = "keiba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "ipykernel>=7.1.0",
    "japanize-matplotlib>=1.1.3",
    "jupyter-client>=8.7.0",
    "lightgbm>=4.6.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pynvim>=0.6.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
